# HamsterDrive

./: .gitignore  Cargo.toml  Cargo.toml.bak  INSTALL.md  LICENSE  README.md  README_backup.md  backup.rs  build.bat  build.rs  download_font.ps1  driver_db.rs  error.rs  fix_encoding.ps1  list.rs  main.rs  minimal_main.rs  restore.rs  run.bat  scan.rs  signature.rs  standalone_main.rs  test_scraper.rs  test_winsafe.rs  test_winsafe_features.rs  update.rs
minimal_project/: Cargo.toml
minimal_project/src/: main.rs
src/: backup.rs  batch_update.rs  driver_db.rs  error.rs  gui.rs  hardware_service.rs  lib.rs  list.rs  main.rs  offline_scan.rs  restore.rs  scan.rs  signature.rs  uninstall.rs  update.rs
src/config/: app_config.rs  config_manager.rs  download_config.rs  mod.rs  scanner_config.rs
src/core/: controller.rs  driver_updater_core.rs  event_loop.rs  mod.rs  state.rs
src/database/: connection.rs  mod.rs  schema.rs
src/database/models/: driver_cache.rs  hardware.rs  installation_log.rs  mod.rs  vendor.rs
src/database/repositories/: driver_repo.rs  hardware_repo.rs  mod.rs  vendor_repo.rs
src/download/: aria2_manager.rs  hash_verifier.rs  http_downloader.rs  manager.rs  mod.rs  progress_tracker.rs  speed_limiter.rs
src/driver/: mod.rs
src/driver/fetcher/: cache_manager.rs  download_queue.rs  driver_fetcher.rs  mod.rs
src/driver/fetcher/parsers/: amd_parser.rs  generic_parser.rs  intel_parser.rs  mod.rs  nvidia_parser.rs  parser_factory.rs  parser_trait.rs  realtek_parser.rs
src/driver/installer/: driver_installer.rs  install_methods.rs  installation_log.rs  mod.rs  privilege_manager.rs  restore_point.rs  rollback_manager.rs
src/driver/matcher/: cloud_client.rs  database.rs  driver_matcher.rs  mod.rs  scoring.rs
src/fetcher/: driver_fetcher.rs  mod.rs
src/hardware/: device_filter.rs  hardware_scanner.rs  identifier.rs  mod.rs  scanner.rs  setupapi_scanner.rs  types.rs  wmi_scanner.rs
src/installer/: driver_installer.rs  mod.rs
src/matcher/: driver_matcher.rs  mod.rs  scraper.rs
src/network/: api_client.rs  cloud_sync.rs  http_client.rs  mod.rs  proxy_config.rs
src/os_info/: mod.rs  os_info.rs
src/system/: activation.rs  hardware_summary.rs  mod.rs  os_info.rs  windows_info.rs
src/types/: driver_types.rs  hardware_types.rs  mod.rs  system_types.rs  ui_types.rs
src/ui/: gui.rs  mod.rs
src/ui/components/: action_buttons.rs  device_card.rs  driver_card.rs  mod.rs  progress_bar.rs
src/ui/tray/: menu_builder.rs  mod.rs  notification.rs  system_tray.rs
src/utils/: crypto.rs  error.rs  file_utils.rs  logging.rs  mod.rs  process_utils.rs  system_utils.rs  winsafe_utils.rs
standalone_version/: Cargo.toml
standalone_version/src/: main.rs
winsafe_feature_test/: Cargo.toml
