[package]
name = "HamsterDrive"
version = "0.1.0"
edition = "2021"
default-run = "HamsterDrive"

[[bin]]
name = "hardware_service"
path = "src/hardware_service.rs"



[dependencies]
winsafe = { version = "0.0.17", features = ["kernel", "user"] }
eframe = "0.28.1"
egui = "0.28.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
wmi = "0.15.0"
serde_json = "1.0"